# project-apollo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
agent/: __init__.py
agent/agents/: dqn_agent.py
agent/callbacks/: __init__.py  apollo_metrics_callback.py
agent/protocols/: agent_protocol.py
agents/: __init__.py  protocols.py  random_agent.py  replay_buffer.py  typed.py
configs/: __init__.py  config_loader.py  schema.py
configs/yaml/: dqn.yaml  environment.yaml  ppo.yaml  training.yaml
entities/: __init__.py  asteroid.py  bullet.py  bullet_manager.py  player.py  saucer.py  typed.py
entities/asteroid/: __init__.py  asteroid.py  asteroid_manager.py  typed.py
entities/bullet/: __init__.py  bullet.py  bullet_manager.py
entities/ship/: __init__.py  destroyed.py  explosion_effect.py  ship.py
entities/ship/player/: hyperspace_manager.py  player.py  ship_explosion_effect.py  typed.py
entities/ship/saucer/: __init__.py  saucer.py  saucer_explosion_effect.py  saucer_manager.py  typed.py
env/: __init__.py  action_space.py  asteroid_env.py  collision_manager.py  danger_model.py  game_world.py  observation.py  respawn_manager.py  reward.py  score_manager.py  toroidal_space.py
rendering/: font.py  hud.py  renderer.py
training/: __init__.py  evaluate.py  logger.py  run_dqn.py  run_random.py  stats.py  trainer.py
training/utils/: __init__.py  device_manager.py
