[project]
name = "project-apollo"
version = "0.1.0"
description = "Asteroids Reinforcement Learning Environment"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pygame",
    "dacite",
    "gymnasium",
    "stable-baselines3"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "ruff",
    "mypy",
    "pytest",
    "types-PyYAML",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]

[tool.mypy]
python_version = "3.10"

strict = true

warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

no_implicit_optional = true

pretty = true
show_error_codes = true

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
]

testpaths = [
    "tests",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
